# dotfiles

./: .gitignore  README.md  alacritty.yml  backup-list  base.chng  dark.chng  dmenu.c  gather-files  init.vim  install  install-deps  picom.conf  repopulate  style.css  theme_path  xmobarrc
alacritty/: alacritty.yml  alacritty.yml.save  light.chng
confedit/: confedit.list
fish/: config.fish  fish_prompt.fish  ftc.fish
fish/completions/: confedit.fish
icons/special/: li.xbm
kitty/: CbonsaiTheme.conf  cbonsaiTheme.conf  dark.theme  kitty.conf  light.theme  open-actions.conf  theme.conf
macchina/: macchina.toml
macchina/themes/: Aurum.toml  Hydrogen.toml
mimeapps/: mimeapps.list
nvim/: coc-settings.json  init.lua  init.vim  lua_init.lua  plugins.lua  tokyonight.vim
nvim/lua/: plugins.lua
picom/: picom.conf
qutebrowser/: config.py  quickmarks
qutebrowser/themes/: onedark.py
ranger/: rifle.conf
rofi/: config.rasi  light.rasi
scripts/: backup_configs  change_theme  confedit  dropdown-term  lua-language-server  print_bindigs  print_bindings  screensaver  theme-changer  vimb  window-ranger
scripts/xmobar/: \  htop  pacupdate  volume
scripts/xmobar_scripts/: bluetooth  pacupdate  run-process  volume
st/: config.h
xmobar/: MyPlugins.hs  build  package.yaml  stack.yaml  volume  xmobar.hs  xmobarrc
xmobar-pc/: xmobarrc
xmobar/icons/special/: li.xpm
xmonad/: build  package.yaml  stack.yaml  xmonad.cabal  xmonad.hs
xmonad-pc/: xmonad.hs
xsession/: .xinitrc  .xsession  xmonad.desktop
xsession-pc/: .xsession
(+1 files in other folders)
