cabal-version:      2.4
name:               xmonad-config
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             xkozlov1
maintainer:         kozlovsky.m7@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

executable xmonad-config
    main-is:          xmonad.hs

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
          base  ^>=4.14.3.0
        , process
        , xmonad
        , xmonad-contrib
        , X11
        , text-format-simple
        , containers
        , flippers
    default-language: Haskell2010
